--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,36 +1,7 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 
-  {% block header %}
-  <header>
-
-    <nav class="navbar bg-dark navbar-dark">
-      <a class="navbar-brand" href="#">Promptiverse</a>
-      <div class="ml-auto">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Account</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <div class="mr-auto">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Gallery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Submit</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-  </header>
-  {% endblock header %}
+{% block nav %}
+{% endblock nav %}
 
   {% block main %}
   <main class="gallery-pad">
@@ -44,7 +15,7 @@
             <div class="card h-100">
               <div class="image-container">
               {% if "placeholder" in post.featured_image.url %}
-              <img src="../static/testimages/TestCard.png" class="card-img-top" alt="...">
+              <img src="https://via.placeholder.com/350x350" class="card-img-top" alt="...">
               {% else %}
               <img class="card-img-top" src=" {{ post.featured_image.url }}">
               {% endif %}
