--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -24,7 +24,7 @@
                 <p class="author">Author: {{ post.author }}</p>
               </div>
               <div class="image-overlay2">
-              <a href="#" class="post-link">
+              <a href="{% url 'post_detail' post.slug %}" class="post-link">
                 <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
                   {{ post.number_of_likes }}</p>
               </a>
