--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -3,36 +3,40 @@
 {% block nav %}
 {% endblock nav %}
 
-  {% block main %}
-  <main class="gallery-pad">
+{% block main %}
+<main class="gallery-pad">
 
-    <div class="container-fluid">
-      <div class="row justify-content-left">
+  <div class="container-fluid">
+    <div class="row justify-content-left">
 
-        {% for post in post_list %}
-        <div class="col-lg-2 col-md-3 col-sm-6 col-6 mb-4 card-container">
-          <div class="d-flex justify-content-center">
-            <div class="card h-100">
-              <div class="image-container">
+      {% for post in post_list %}
+      <div class="col-lg-2 col-md-3 col-sm-6 col-6 mb-4 card-container">
+        <div class="d-flex justify-content-center">
+          <div class="card h-100">
+            <div class="image-container">
               {% if "placeholder" in post.featured_image.url %}
               <img src="https://via.placeholder.com/350x350" class="card-img-top" alt="...">
               {% else %}
               <img class="card-img-top" src=" {{ post.featured_image.url }}">
               {% endif %}
             </div>
-              <div class="image-overlay">
-                <p class="author">Author: {{ post.author }}</p>
-              </div>
-              <div class="image-overlay2">
-              <a href="{% url 'post_detail' post.slug %}" class="post-link">
-                <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
-                  {{ post.number_of_likes }}</p>
-              </a>
+            <div class="image-overlay">
+              <p class="author">Author: {{ post.author }}<span class="gallery-likes"><i class="far fa-heart"></i>
+                  {{ post.number_of_likes }}</span></p>
             </div>
+            <div class="image-overlay2">
+              <a href="{% url 'post_detail' post.slug %}" class="post-link">
+                <p class="card-text text-muted h6">{{ post.created_on}}
+                  {% with post.comments.count as total_comments %}
+                  <strong class="text-secondary"><i class="far fa-comments"></i>
+                    {{ total_comments }}</strong>
+                  {% endwith %}
+              </a>
             </div>
           </div>
         </div>
-        {% endfor %}
+      </div>
+      {% endfor %}
 
-  </main>
-  {% endblock %}
+</main>
+{% endblock %}
