--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,10 +3,13 @@
 
 <header>
 
-  <nav class="navbar bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <a class="navbar-brand" href="#">Promptiverse</a>
     <div class="ml-auto">
       <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Account</a>
         </li>
@@ -40,7 +43,10 @@
       <div class="ml-auto">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Login / Signup</a>
+            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_signup' %}">Signup</a>
           </li>
         </ul>
       </div>
