--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,11 @@
-{% load static %}
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html class="h-100">
-
-<head>
-  <title>Promptiverse</title>
-
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="https://kit.fontawesome.com/9cb253b564.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  <link rel="stylesheet" href="../static/css/style.css">
-
-</head>
+{% block index %}
 
 {% include 'nav.html' %}
 
+{% block account %}
+{% endblock account %}
 <body class="bg-dark">
 
   {% if user.is_authenticated %}
@@ -95,9 +83,9 @@
       </div>
     </div>
   </footer>
-
+  {% endblock index %}
   <!-- Script -->
-  <script>
+  <!-- <script>
     setTimeout(function () {
       let messages = document.getElementById('msg');
       let alert = new bootstrap.Alert(messages);
@@ -109,4 +97,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 </body>
 
-</html>
+</html> -->
