--- a/templates/nav.html
+++ b/templates/nav.html
@@ -22,7 +22,7 @@
       <div class="mr-auto">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
+            <a class="nav-link" href="{% url 'home' %}">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Submit</a>
