add post submission base

--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block index %}
+{% block main %}
 <div class="container-fluid">
   <div class="row d-flex justify-content-center">
     <div class="mt-3">
