--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block index %}
+{% block main %}
 
 <div class="container-fluid">
   <div class="row d-flex justify-content-center">
