--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
-
+<body class="bg-dark">
+  
 {% block index %}
 {% endblock index %}
 
