--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,8 +1,5 @@
 {% extends "index.html" %}
 
-{% block nav %}
-{% endblock nav %}
-
 {% block main %}
 <main class="gallery-pad">
 
@@ -21,7 +18,7 @@
               {% endif %}
             </div>
             <div class="image-overlay">
-              <p class="author">Author: {{ post.author }}<span class="gallery-likes"><i class="far fa-heart"></i>
+              <p class="author">{{ post.title }}<span class="gallery-likes"><i class="far fa-heart"></i>
                   {{ post.number_of_likes }}</span></p>
             </div>
             <div class="image-overlay2">
