--- a/templates/nav.html
+++ b/templates/nav.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="{% url 'home' %}">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Submit</a>
+            <a class="nav-link" href="{% url 'create_post' %}">Submit</a>
           </li>
         </ul>
       </div>
