tweak image post retry

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,10 +1,9 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
-
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block main %}
+{% block index %}
 
 <div class="container-fluid">
   <div class="row d-flex justify-content-center">
