--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -3,37 +3,35 @@
 {% block main %}
 <main class="gallery-pad">
 
-  <div class="container-fluid">
-    <div class="row justify-content-left">
-
-      {% for post in post_list %}
-      <div class="col-lg-2 col-md-3 col-sm-6 col-6 mb-4 card-container">
-        <div class="d-flex justify-content-center">
-          <div class="card h-100">
-            <div class="image-container">
-              {% if "placeholder" in post.featured_image.url %}
-              <img src="https://via.placeholder.com/350x350" class="card-img-top" alt="...">
-              {% else %}
-              <img class="card-img-top" src=" {{ post.featured_image.url }}">
-              {% endif %}
-            </div>
-            <div class="image-overlay">
-              <p class="author">{{ post.title }}<span class="gallery-likes"><i class="far fa-heart"></i>
-                  {{ post.number_of_likes }}</span></p>
-            </div>
-            <div class="image-overlay2">
-              <a href="{% url 'post_detail' post.slug %}" class="post-link">
-                <p class="card-text text-muted h6">{{ post.created_on}}
-                  {% with post.comments.count as total_comments %}
-                  <strong class="text-secondary"><i class="far fa-comments"></i>
-                    {{ total_comments }}</strong>
-                  {% endwith %}
-              </a>
-            </div>
+  <div class="row justify-content-center no-gutters">
+    {% for post in post_list %}
+    <div id="card-container">
+      <div class="d-flex justify-content-center">
+        <a href="{% url 'post_detail' post.slug %}">
+        <div class="card h-100">
+          <div class="image-container">
+            {% if "placeholder" in post.featured_image.url %}
+            <img src="https://via.placeholder.com/384x512" class="card-img-top" alt="...">
+            {% else %}
+            <img class="card-img" src=" {{ post.featured_image.url }}">
+            {% endif %}
+          </div>
+          <div class="image-overlay" id="image-overlay">
+            <p class="author">{{ post.title }}<span class="gallery-likes"></span></p>
+          </div>
+          <div class="image-overlay2" id="image-overlay2">
+              <span class="like-counter"><i class="far fa-heart"></i>
+              {{ post.number_of_likes }}</span>
+              {% with post.comments.count as total_comments %}
+              <span class="comment-counter"><i class="far fa-comments"></i> {{ total_comments }}</span>
+              {% endwith %}
           </div>
         </div>
+      </a>
       </div>
-      {% endfor %}
+    </div>
+    {% endfor %}
+  </div>
 
 </main>
 {% endblock %}
