--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="row text-center">
           <div class="col-md-4"><span class="fa-stack fa-3x service-icons"><i
-                class="fa fa-circle fa-stack-2x text-primary"></i><i
+                class="fa fa-circle fa-stack-2x" id="text-primary"></i><i
                 class="fa fa-solid fa-palette fa-stack-1x fa-inverse"></i></span>
             <h4 class="section-heading">Post</h4>
             <p class="text-muted">. Our community is dedicated to exploring
@@ -37,7 +37,7 @@
               us.</p>
           </div>
           <div class="col-md-4"><span class="fa-stack fa-3x service-icons"><i
-                class="fa fa-circle fa-stack-2x text-primary"></i><i
+                class="fa fa-circle fa-stack-2x" id="text-primary"></i><i
                 class="fa fa-solid fa-comment fa-stack-1x fa-inverse"></i></span>
             <h4 class="section-heading">Comment</h4>
             <p class="text-muted">Each post features an image, title, prompt, negative prompt, and method, providing a
@@ -46,7 +46,7 @@
               inspiration to one another.</p>
           </div>
           <div class="col-md-4"><span class="fa-stack fa-3x service-icons"><i
-                class="fa fa-circle fa-stack-2x text-primary"></i><i
+                class="fa fa-circle fa-stack-2x" id="text-primary"></i><i
                 class="fa fa-laptop fa-stack-1x fa-inverse"></i></span>
             <h4 class="section-heading">Expand</h4>
             <p class="text-muted">Your mind, to join our community, simply click the 'Account' button and sign up for an
@@ -71,9 +71,9 @@
         </div>
         <div class="col-6">
           <div class="social-links text-right">
-            <img src="https://via.placeholder.com/30x30" alt="Social Media Link 1">
-            <img src="https://via.placeholder.com/30x30" alt="Social Media Link 2">
-            <img src="https://via.placeholder.com/30x30" alt="Social Media Link 3">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
           </div>
         </div>
       </div>
