--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,7 @@
 
 <header>
 
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <nav class="navbar bg-dark navbar-items">
     <a class="navbar-brand" href="#">Promptiverse</a>
     <div class="ml-auto">
       <ul class="navbar-nav">
@@ -17,15 +17,15 @@
     </div>
   </nav>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar sub-nav-col navbar-items">
     <div class="container-fluid">
       <div class="mr-auto">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Gallery</a>
+            <a class="nav-link sub-nav-links" href="{% url 'home' %}">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'create_post' %}">Submit</a>
+            <a class="nav-link sub-nav-links" href="{% url 'create_post' %}">Submit</a>
           </li>
         </ul>
       </div>
@@ -38,7 +38,7 @@
 {% else %}
   <header>
 
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar bg-dark navbar-items">
       <a class="navbar-brand" href="#">Promptiverse</a>
       <div class="ml-auto">
         <ul class="navbar-nav">
