--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,7 +11,7 @@
           <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Account</a>
+          <a class="nav-link" href="{% url 'account_posts' %}">Account</a>
         </li>
       </ul>
     </div>
