--- a/templates/account.html
+++ b/templates/account.html
@@ -2,14 +2,18 @@
 {% block main %}
 <main class="gallery-pad">
 
-  <div class="container-fluid"><h3>Account Name: {{ user.username }}</h3></div>
-  <div class="container-fluid"><p>POST LIST:</p></div>
   <div class="container-fluid">
-  <div class="row justify-content-left no-gutters">
-    {% for post in post_list %}
-    <div id="card-container">
-      <div class="d-flex justify-content-center">
-        
+    <h3>Account Name: {{ user.username }}</h3>
+  </div>
+  <div class="container-fluid">
+    <p>POST LIST:</p>
+  </div>
+  <div class="container-fluid">
+    <div class="row justify-content-left no-gutters">
+      {% for post in post_list %}
+      <div id="card-container">
+        <div class="d-flex justify-content-center">
+
           <div class="card h-100">
 
             <div class="image-container">
@@ -22,11 +26,14 @@
 
             <div class="image-overlay">
               <p class="author">{{ post.title }}</p>
-                {% if post.status == 1 %}
-                <div id="acc-pst-det">POST STATUS: PUBLISHED</div>
-                {% else %}
-                <div id="acc-pst-det">POST STATUS: DRAFT</div>
-                {% endif %}
+              {% if post.status == 1 %}
+              <div id="acc-pst-det">POST STATUS: PUBLISHED</div>
+              {% else %}
+              <div id="acc-pst-det">POST STATUS: DRAFT</div>
+              {% endif %}
+              {% if request.user == post.author %}
+              <a href="{% url 'delete_post' post.slug %}" class="btn btn-danger">Delete</a>
+              {% endif %}
             </div>
 
             <div class="image-overlay2">
@@ -37,15 +44,15 @@
               {% endwith %}
             </div>
 
-            
+
 
           </div>
-        
+
+        </div>
       </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   </div>
-</div>
 
 </main>
 {% endblock %}
