--- a/templates/image_post.html
+++ b/templates/image_post.html
@@ -66,7 +66,7 @@
       <div class="card mb-3">
         <div class="card-header">
           {{ comment.name }} said on {{ comment.created_on }}:
-          {% if user.is_authenticated %}
+          {% if user.is_authenticated and comment.name == user.username %}
           <a href="{% url 'comment_delete' pk=comment.pk %}" class="btn btn-danger btn-sm float-right">Delete</a>
           {% endif %}
         </div>
