--- a/templates/account.html
+++ b/templates/account.html
@@ -1,6 +1,11 @@
 {% extends "index.html" %}
 {% block main %}
 <main class="gallery-pad">
+  {% if request.user.is_superuser %}
+  <a href="{% url 'admin:index' %}">
+    <button class="btn btn-danger">Superuser Button</button>
+  </a>
+  {% endif %}
 
   <div class="container-fluid">
     <h3>Account Name: {{ user.username }}</h3>
@@ -55,21 +60,22 @@
     </div>
   </div>
 
-{% for comment in user_comments %}
-<div class="card mb-3">
-  <div class="card-header">
-    {{ comment.name }} said on {{ comment.created_on }}:
-    {% if user.is_authenticated and comment.name == user.username %}
-    
-    <a href="{% url 'comment_delete' pk=comment.pk %}?page=account" class="btn btn-danger btn-sm float-right">Delete</a>
-    {% endif %}
+  {% for comment in user_comments %}
+  <div class="card mb-3">
+    <div class="card-header">
+      {{ comment.name }} said on {{ comment.created_on }}:
+      {% if user.is_authenticated and comment.name == user.username %}
+
+      <a href="{% url 'comment_delete' pk=comment.pk %}?page=account"
+        class="btn btn-danger btn-sm float-right">Delete</a>
+      {% endif %}
+    </div>
+    <div class="card-body">
+      <p>{{ comment.body }}</p>
+    </div>
   </div>
-  <div class="card-body">
-    <p>{{ comment.body }}</p>
-  </div>
-</div>
-{% empty %}
-<p>No comments yet.</p>
-{% endfor %}
+  {% empty %}
+  <p>No comments yet.</p>
+  {% endfor %}
 </main>
 {% endblock %}
