--- a/static/css/style.css
+++ b/static/css/style.css
@@ -209,3 +209,55 @@ section {
 	color: inherit !important;
 	text-decoration: underline;
 }
+
+/* Masonry Grid layout https://www.w3resource.com/html-css-exercise/html-css-practical-exercises/html-css-practical-exercise-40.php */
+
+/* Container */
+.masonry-container {
+	--column-count-small: 2;
+	--column-count-medium: 3;
+	--column-count-large: 5;
+	--column-count-xlarge: 6;
+	--column-gap: 0.125rem;
+	padding: var(--column-gap);
+  }
+  
+  /* Columns */
+  .masonry-columns {
+	column-gap: var(--column-gap);
+	column-count: var(--column-count-small);
+	column-width: calc(1 / var(--column-count-small) * 100%);
+  }
+  
+  @media only screen and (min-width: 640px) {
+	.masonry-columns {
+	  column-count: var(--column-count-medium);
+	  column-width: calc(1 / var(--column-count-medium) * 100%);
+	}
+  }
+  
+  @media only screen and (min-width: 860px) {
+	.masonry-columns {
+	  column-count: var(--column-count-large);
+	  column-width: calc(1 / var(--column-count-large) * 100%);
+	}
+  }
+
+  @media only screen and (min-width: 1200px) {
+	.masonry-columns {
+	  column-count: var(--column-count-xlarge);
+	  column-width: calc(1 / var(--column-count-xlarge) * 100%);
+	}
+  }
+  
+  /* Bricks */
+  .masonry-brick {
+	width: 100%;
+	height: auto;
+	margin: var(--column-gap) 0;
+	display: block;
+  }
+  
+  .masonry-brick:first-child {
+	margin: 0 0 var(--column-gap);
+  }
