--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,6 +1,7 @@
 {% extends "index.html" %}
 
 {% block main %}
+
 <main class="gallery-pad">
 
   <div class="masonry-container">
@@ -37,6 +38,6 @@
   </div>
 </div>
 
-
+<script src="../static/js/script.js"></script>
 </main>
 {% endblock %}
